chore: добавить описание и ссылку на видео к упражнениям
