# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\Api\AuthController;
 use App\Http\Controllers\Api\ExerciseController;
+use App\Http\Controllers\Api\GetExerciseController;
 use App\Http\Middleware\ValidateTelegramWebAppData;
 use Illuminate\Support\Facades\Route;
 
@@ -15,6 +16,11 @@ Route::post('auth', AuthController::class)
 Route::get('exercises', ExerciseController::class)
     ->middleware('auth:sanctum')
     ->name('api.exercises.index');
+
+Route::get('exercises/{exercise}', GetExerciseController::class)
+    ->whereNumber('exercise')
+    ->middleware('auth:sanctum')
+    ->name('api.exercises.show');
 
 require base_path('app/WorkoutPlanning/Presentation/Routes/api.php');
 require base_path('app/WorkoutExecution/Presentation/Routes/api.php');
